@@ -1,4 +1,9 @@
 release 1.0.1 (2008-11/12)
+- When using JSP-based views the response status and meta-data is now committed
+  to the HttpServletResponse before the JSP is processed.
+- Fix for issue 137
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=137
+  MessageBodyFactory should pass the full MediaType
 - Improved valdation error when a sub-resource locator has a unannotated
   parameter this is likely, instead, to be associated with an request entity of 
   a resource method.
